--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
-#call to the API to keep alive, encrypted version
-name: ofc
+#Automatic call to the API to keep alive, encrypted version
+name: MSO_E5_Dev_AutoRenew
 
 on: 
   release:
@@ -40,7 +40,7 @@ jobs:
         CONFIG_KEY: ${{ secrets.CONFIG_KEY }} # secrets_key prepare
         REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }} # refresh_token prepare
       run: | 
-        cp ofc.py temp.py
+        cp main.py temp.py
         echo $CONFIG_ID > configid.txt
         echo $CONFIG_KEY > configkey.txt
         echo $REFRESH_TOKEN > refreshtoken.txt
