--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -1,75 +1,48 @@
-#Automatic call to the API to keep alive, 
-name: MSO_E5_Dev_AutoRenew
+name: Auto Api
 
 on: 
   release:
     types: [published]
   push:
+    branches:
+      - master
     tags:
     - 'v*'
-  #  branches: 
-  #    - master
   schedule:
-    - cron: "10 */2 * * *"
+    - cron: 0 */2 * * *
   watch:
     types: [started]
    
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: (github.event.repository.owner.id == github.event.sender.id) || ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}  # Self-ordered start
-    #if: github.event.repository.owner.id == github.event.sender.id  # Self-ordered start
-    name: Build and call API
+    
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@master
+    - name: Set up Python
+      uses: actions/setup-python@v3
       with:
-        persist-credentials: true # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
-        fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
-    - name: Set up Python #Install python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.9
-        check-latest: true
-    - name: Install requests #Installation requests
+        python-version: 3.8
+    - name: Install requests
       run: |
         pip install requests
-    - name: Read config from secrets  #Read Secret
+        pip install pynacl
+    - name: read config from secrets
       env: 
-        CONFIG_ID: ${{ secrets.CONFIG_ID }} # secrets_id prepare
-        CONFIG_KEY: ${{ secrets.CONFIG_KEY }} # secrets_key prepare
-        REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }} # refresh_token prepare
-      run: | 
-        cp ofc.py temp.py
-        echo $CONFIG_ID > configid.txt
-        echo $CONFIG_KEY > configkey.txt
-        echo $REFRESH_TOKEN > refreshtoken.txt
-        sed -i '10 r configid.txt' temp.py
-        sed -i '12 r configkey.txt' temp.py
-        sed -i '14 r refreshtoken.txt' temp.py
-    - name: Test Api #ApiCall
-      run: | 
-        echo `date +"%Y-%m-%d %H:%M:%S"` begin > time.log
-        python3 temp.py
-    - name: Delete secrets config #Delete secret config
-      run: | 
-        rm -f temp.py
-        rm -f configid.txt
-        rm -f configkey.txt
-        rm -f refreshtoken.txt
-        rm -f Secret.txt
-    - name: Commit #Upload a new refresh_token to the repository
-      env: 
-        GIT_NAME: ${{ secrets.GIT_NAME }} # git_name prepare
-        GIT_EMAIL: ${{ secrets.GIT_EMAIL }} # git_email prepare
+        id: ${{ secrets.CONFIG_ID }}
+        secret: ${{ secrets.CONFIG_KEY }}
+        token: ${{secrets.GPT_TOKEN}}
+        refresh_token: ${{secrets.REFRESH_TOKEN}}
+      run: |    
+        python ofc.py
+    - name: commit
       run: |
-        git config --global user.name $GIT_NAME
-        git config --global user.email $GIT_EMAIL
+        git config --global user.email  "fuongtd@gmail.com"
+        git config --global user.name "fuongtd"
         git add .
-        git commit -m "Update new refresh token" -a
+        git commit -m "update new token" -a
     - name: Push changes
-      uses: ad-m/github-push-action@v0.6.0
+      uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.ref }}
-        #force_with_lease: true
